# blinx_sparkle_stats

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: README.md  transition_matrix_rewrite.py
scripts/generate/: README.md  playground_train.py  playground_val.py  train.py  val.py
scripts/train/: README.md  resnet.py
scripts/visualize/: README.md  get_architecture.py  get_args.py  get_dataset.py  get_model.py  predict.py  scatter_param_distribution_no_error.py  scatter_param_distribution_no_error_by_n.py  visualize_params.py  visualize_traces.py
sparkle_stats/: generate_dataset.py  generate_traces.py  likelihoods.py  normalized_loss.py  parameters_util.py  sample_parameters.py  trace_model.py  zarr_dataset.py  zarr_datasets.py
sparkle_stats/datasets/: __init__.py  memory_datasets.py  p_on_p_off_only_dataset.py  re_pon_poff_dataset.py  zarr_dataset.py  zarr_datasets.py  zarr_intensity_only_dataset.py  zarr_state_dataset.py
sparkle_stats/models/: __init__.py  attention.py  conv_sfc.py  gigantic_mlp.py  resnet1d.py  simple_fully_connected.py  vgg1d.py  vgg_simple.py
sparkle_stats/training/: loaders.py  loop.py  loss.py
tests/: test_generate_memory_dataset.py  test_likelihood_loss.py  test_likelihoods.py  test_parameters_util.py  test_sample_parameters.py  test_vmap_generate_traces.py  test_vmap_get_trace_log_likelihood.py
